fix: :wrench: Bearer authorization on swagger
