# docs/swagger.json
@@ -85,6 +85,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Get all users",
                 "consumes": [
                     "application/json"
@@ -122,6 +127,11 @@
         },
         "/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Get user by id",
                 "consumes": [
                     "application/json"
@@ -154,6 +164,11 @@
         },
         "/users/{id}/delete": {
             "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Delete user by id",
                 "consumes": [
                     "application/json"
@@ -186,6 +201,11 @@
         },
         "/users/{id}/update": {
             "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Update user by id",
                 "consumes": [
                     "application/json"
@@ -244,8 +264,8 @@
         }
     },
     "securityDefinitions": {
-        "BearerAuth": {
-            "description": "Add prefix of Bearer before  token Ex: \"Bearer token\"",
+        "Bearer": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
